# iron-chess

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  IronChess.sln  IronChess.uproject  README.md  README_conflicted.md  build.sh
Binaries/Mac/: libtbb.dylib  libtbbmalloc.2.13.dylib
Config/: DefaultEngine.ini
Documentation/: Asset_Pipeline.md  Design_Document.md  Development_Summary.md  Sample_Narrative_Content.md
IronChess (Mac).xcworkspace/: contents.xcworkspacedata
IronChess (Mac).xcworkspace/xcuserdata/samuelabdelsayed.xcuserdatad/: UserInterfaceState.xcuserstate
Source/: IronChess.Target.cs  IronChessEditor.Target.cs
Source/IronChess/: IronChess.Build.cs  IronChess.cpp
Source/IronChess/AI/: ChessAIComponent.cpp  ChessAIComponent.h
Source/IronChess/Animation/: BattleSequenceComponent.cpp  BattleSequenceComponent.h
Source/IronChess/Cinematic/: CinematicDirector.cpp  CinematicDirector.h
Source/IronChess/Core/: ChessGameLogic.cpp  ChessGameLogic.h  ChessTypes.h
assets/sounds/: README.md
crates/core-logic/: Cargo.toml
crates/core-logic/src/: board.rs  lib.rs  moves.rs  pieces.rs  validation.rs
crates/iron-chess/: Cargo.toml
crates/iron-chess/src/: main.rs
include/: ChessAI.h  ChessBoard.h  ChessTypes.h  Game.h  Graphics.h
src/: ChessTypes.cpp  main.cpp
