[workspace]
resolver = "2"
members = [
    "crates/iron-chess",
    "crates/core-logic",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Samuel Abdelsayed"]
license = "MIT"

[workspace.dependencies]
# Bevy game engine with full 3D features
bevy = { version = "0.14", features = ["dynamic_linking", "bevy_pbr", "bevy_animation"] }

# Async runtime for AI computation
tokio = { version = "1.40", features = ["full"] }

# Serialization for game state and replays
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Random number generation for AI
rand = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
codegen-units = 1
